--- a/style.css
+++ b/style.css
@@ -18,10 +18,16 @@ header{
 
 footer{
 
- height: 200px;
+ height: 150px;
  background-color: grey;
  margin-bottom: 20px;
  margin-top: 10px;
+}
+
+.clearfix{
+
+  clear: both;
+
 }
 
 main{
@@ -41,10 +47,10 @@ main .contenitoredoppio{
 
 main .contenitore1{
 
-   width:30%;
-   background-color: purple;
+   width:28%;
+   background-color: #e1aee1;
    height: 300px;
-   margin-right: 2px;
+   margin-right: 10px;
 
 
 }
@@ -53,8 +59,27 @@ main .contenitore2{
 
   width:40%;
   background-color: purple;
-  height: 300px;
-  margin-right: 2px;
+  height: 500px;
+  margin-right: 15px;
+
+
+}
+
+main .contenitoredoppio{
+
+  width: 28%;
+  height: 450px;
+  margin-bottom: 10px;
+
+}
+
+
+.piccoli{
+
+
+  background-color: #e1aee1 ;
+  height: 50%;
+  margin-bottom: 5px;
 
 
 }
